Score board Added, heading resized

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <section>
     <h1 class="game--title">Tic Tac Toe</h1>
+    <p>You:0&emsp;Computer:<span id="score">0</span></p>
     <div class="game--container">
       <div id="one" data-cell-index="0" class="cell"></div>
       <div data-cell-index="1" class="cell"></div>
